--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -3,21 +3,31 @@
 
 <html lang="{{ LANGUAGE_CODE }}">
 
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Менеджер задач Hexlet</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
     <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
+</head>
 
-  <body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
     <header class="flex-shrink-0">
         {% include 'navbar.html' %}
     </header>
     <div class="container wrapper flex-grow-1">
-            {% block content %}
-            {% endblock %}
+      {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+      </ul>
+      {% endif %}
+          {% block content %}
+          {% endblock %}
     </div>
 </body>
 </html>
-  </body>
