--- a/task_manager/templates/users/users.html
+++ b/task_manager/templates/users/users.html
@@ -20,11 +20,13 @@
                     <td>{{ user.username }}</td>
                     <td>{{ user.get_full_name }}</td>
                     <td>{{ user.date_joined }}</td>
+                    {% if user == current_user %}
                     <td>
                         <a href="{% url 'update_user' user.id %}">Изменить</a>
                         <br>
                         <a href="{% url 'delete_user' user.id %}">Удалить</a>
                     </td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
