labels crud logic

--- a/task_manager/templates/tasks/current_task.html
+++ b/task_manager/templates/tasks/current_task.html
@@ -30,9 +30,9 @@
                 <div class="row p-1">
                     <div class="col">
                         <h6>Метки:</h6>
-                        {% for tag in tags %}
+                        {% for label in labels %}
                         <ul>
-                            <li>{{ tag.name }}</li>
+                            <li>{{ label.name }}</li>
                         </ul>
                     </div>
                 </div>
