--- a/task_manager/templates/users/update_user.html
+++ b/task_manager/templates/users/update_user.html
@@ -6,13 +6,14 @@
     <form method="post">
         {% csrf_token %}
         <div class="mb-3"><label class="form-label" for="id_first_name">Имя</label><input type="text" name="first_name"
-                value="testuser" maxlength="150" class="form-control" placeholder="Имя" required="" id="id_first_name">
+                value="{{ user.first_name }}" maxlength="150" class="form-control" placeholder="Имя" required=""
+                id="id_first_name">
         </div>
         <div class="mb-3"><label class="form-label" for="id_last_name">Фамилия</label><input type="text"
-                name="last_name" value="testuser" maxlength="150" class="form-control" placeholder="Фамилия" required=""
-                id="id_last_name"></div>
+                name="last_name" value="{{ user.last_name }}" maxlength="150" class="form-control" placeholder="Фамилия"
+                required="" id="id_last_name"></div>
         <div class="mb-3"><label class="form-label" for="id_username">Имя пользователя</label><input type="text"
-                name="username" value="testuser1" maxlength="150" autofocus="" class="form-control"
+                name="username" value="{{ user.username }}" maxlength="150" autofocus="" class="form-control"
                 placeholder="Имя пользователя" required="" id="id_username">
             <div class="form-text">Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_.
             </div>
