--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -7,17 +7,17 @@
   <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/users/">Пользователи</a>
+        <a class="nav-link" href="{% url 'users' %}">Пользователи</a>
       </li>
       {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="/statuses/">Статусы</a>
+        <a class="nav-link" href="{% url 'statuses' %}">Статусы</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/labels/">Метки</a>
+        <a class="nav-link" href="{% url 'labels' %}">Метки</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tasks/">Задачи</a>
+        <a class="nav-link" href="{% url 'tasks' %}">Задачи</a>
       </li>
       <ul class="navbar-nav">
         <form action="{% url 'logout' %}" method="post">
