--- a/task_manager/templates/statuses/update_status.html
+++ b/task_manager/templates/statuses/update_status.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Изменения статуса</h1>
-    <form method="post"">
+    <form method="post">
         {% csrf_token %}
         <div class=" mb-3"><label class="form-label" for="id_name">Имя</label><input type="text" name="name"
             maxlength="100" class="form-control" placeholder="Имя" required="" id="id_name" value={{ status.name }}>
