--- a/task_manager/templates/labels/delete_label.html
+++ b/task_manager/templates/labels/delete_label.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Удаление метки</h1>
-    <p>Вы уверены, что хотите удалить {{ label.name }}?</p>
+    <h1 class="my-4">{% translate "Delete label" %}</h1>
+    <p>{% translate "Are you sure you want to delete" %} {{ label.name }}?</p>
     <form method="post">
         {% csrf_token %}
         <input class="btn btn-danger" type="submit" value="Да, удалить">
