--- a/task_manager/templates/labels/labels.html
+++ b/task_manager/templates/labels/labels.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Метки</h1>
-    <a class="btn btn-primary mb-3" href="{% url 'create_label' %}">Создать метку</a>
+    <h1 class="my-4">{% translate "Labels" %}</h1>
+    <a class="btn btn-primary mb-3" href="{% url 'create_label' %}">{% translate "Create label" %}</a>
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Имя</th>
-                <th>Дата создания</th>
+                <th>{% translate "Name" %}</th>
+                <th>{% translate "Date created" %}</th>
                 <th></th>
             </tr>
         </thead>
@@ -20,9 +20,9 @@
                 <td>{{ label.name }}</td>
                 <td>{{ label.created_at }}</td>
                 <td>
-                    <a href="{% url 'update_label' label.id %}">Изменить</a>
+                    <a href="{% url 'update_label' label.id %}">{% translate "Update" %}</a>
                     <br>
-                    <a href="{% url 'delete_label' label.id %}">Удалить</a>
+                    <a href="{% url 'delete_label' label.id %}">{% translate "Delete" %}</a>
                 </td>
             </tr>
             {% endfor %}
