--- a/task_manager/templates/labels/update_label.html
+++ b/task_manager/templates/labels/update_label.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Изменение метки</h1>
+    <h1 class="my-4">{% translate "Update label" %}</h1>
     <form method="post">
         {% csrf_token %}
-        <div class="mb-3"><label class="form-label" for="id_name">Имя</label><input type="text" name="name"
+        <div class="mb-3"><label class="form-label" for="id_name">{% translate "Name" %}</label><input type="text" name="name"
                 maxlength="100" class="form-control" placeholder="Имя" required="" id="id_name"
                 value="{{ label.name }}"></div>
         <input class="btn btn-primary" type="submit" value="Изменить">
