--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}      
     <div class="card">
       <div class="card-body p-5 bg-light">
-        <div class="display-4">Привет!</div>
+        <div class="display-4">Менеджер задач</div>
         <p class="lead">Это задачник</p>
         <hr>
         <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">Узнать больше</a>
