--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -9,7 +9,7 @@
         <div class="card mb-3">
             <div class="card-body bg-light">
                 <form class="form-inline center" method="get">
-                  {% bootstrap_form filter.form field_class="ml-2 mr-3" %}
+                    {% bootstrap_form filter.form %}
                     <button class="btn btn-primary btn-sm" type="submit">{% translate 'Show' %}</button>
                 </form>
             </div>
