--- a/task_manager/templates/auth/login.html
+++ b/task_manager/templates/auth/login.html
@@ -1,19 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
+{% load django_bootstrap5 %}
 <div class="container wrapper flex-grow-1">
-
   <h1 class="my-4">{% translate "Login" %}</h1>
-
   <form method="post">
     {% csrf_token %}
-    <div class="mb-3"><label class="form-label" for="id_username">{% translate "Username" %}</label><input type="text"
-        name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" class="form-control"
-        placeholder="Имя пользователя" required="" id="id_username"></div>
-    <div class="mb-3"><label class="form-label" for="id_password">{% translate "Password" %}</label><input type="password" name="password"
-        autocomplete="current-password" class="form-control" placeholder="Пароль" required="" id="id_password"></div>
-    <input class="btn btn-primary" type="submit" value="Войти">
+    {% bootstrap_form form %}
+    <button class="btn btn-primary btn-sm" type="submit">{% translate "Login" %}</button>
   </form>
-
 </div>
 {% endblock %}
