--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block content %}      
-    <div class="card">
-      <div class="card-body p-5 bg-light">
-        <div class="display-4">Менеджер задач</div>
-        <p class="lead">Это задачник</p>
-        <hr>
-        <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">Узнать больше</a>
-      </div>
-    </div>
+{% block content %}
+<div class="card">
+  <div class="card-body p-5 bg-light">
+    <div class="display-4">{% translate "Task manager" %}</div>
+    <p class="lead">{% translate "Simple task manager" %}</p>
+    <hr>
+    <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">{% translate "Learn more" %}</a>
+  </div>
+</div>
 {% endblock %}
