--- a/task_manager/templates/labels/create_label.html
+++ b/task_manager/templates/labels/create_label.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
+{% load django_bootstrap5 %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">{% translate "Create label" %}</h1>
     <form method="post" action="{% url 'create_label' %}">
         {% csrf_token %}
-        <div class="mb-3"><label class="form-label" for="id_name">{% translate "Name" %}</label><input type="text" name="name"
-                maxlength="100" class="form-control" placeholder="Имя" required="" id="id_name"></div>
-        <input class="btn btn-primary" type="submit" value="Создать">
+        {% bootstrap_form form %}
+        <input class="btn btn-primary" type="submit" value="{% translate 'Create' %}">
     </form>
 </div>
 {% endblock %}
