--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,36 +1,36 @@
 {% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
-  <a class="navbar-brand" href="{% url 'index' %}">Менеджер задач</a>
+  <a class="navbar-brand" href="{% url 'index' %}">{% translate "Task manager" %}</a>
   <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'users' %}">Пользователи</a>
+        <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
       </li>
       {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'statuses' %}">Статусы</a>
+        <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'labels' %}">Метки</a>
+        <a class="nav-link" href="{% url 'labels' %}">{% translate "Labels" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'tasks' %}">Задачи</a>
+        <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
       </li>
       <ul class="navbar-nav">
         <form action="{% url 'logout' %}" method="post">
           {% csrf_token %}
-          <input class="btn nav-link" type="submit" value="Выход">
+          <input class="btn nav-link" type="submit" value="{% translate 'Logout' %}">
         </form>
       </ul>
       {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">Вход</a>
+        <a class="nav-link" href="{% url 'login' %}">{% translate "Login" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'create_user' %}">Регистрация</a>
+        <a class="nav-link" href="{% url 'create_user' %}">{% translate "Register" %}</a>
       </li>
       {% endif %}
     </ul>
