--- a/task_manager/templates/statuses/create_status.html
+++ b/task_manager/templates/statuses/create_status.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
+{% load django_bootstrap5 %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Создать статус
-    </h1>
+    <h1 class="my-4">{% translate "Create status" %}</h1>
     <form method="post" action="{% url 'create_status' %}">
         {% csrf_token %}
-        <div class="mb-3"><label class="form-label" for="id_name">Имя</label><input type="text" name="name"
-                maxlength="100" class="form-control" placeholder="Имя" required="" id="id_name"></div>
-        <input class="btn btn-primary" type="submit" value="Создать">
+        {% bootstrap_form form %}
+        <input class="btn btn-primary" type="submit" value="{% translate 'Create' %}">
     </form>
 </div>
 {% endblock %}
