--- a/task_manager/templates/statuses/delete_status.html
+++ b/task_manager/templates/statuses/delete_status.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Удаление статуса</h1>
-    <p>Вы уверены, что хотите удалить {{ status.name }}?</p>
+    <h1 class="my-4">{% translate "Delete status" %}</h1>
+    <p>{% translate "Are you sure you want to delete" %} {{ status.name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="Да, удалить">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Delete' %}">
     </form>
 </div>
 {% endblock %}
