--- a/task_manager/templates/statuses/statuses.html
+++ b/task_manager/templates/statuses/statuses.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Статусы</h1>
-    <a class="btn btn-primary mb-3" href="{% url 'create_status' %}">Создать статус</a>
+    <h1 class="my-4">{% translate "Statuses" %}</h1>
+    <a class="btn btn-primary mb-3" href="{% url 'create_status' %}">{% translate "Create status" %}</a>
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Имя</th>
-                <th>Дата создания</th>
+                <th>{% translate "Name" %}</th>
+                <th>{% translate "Date created" %}</th>
                 <th></th>
             </tr>
         </thead>
@@ -20,9 +20,9 @@
                 <td>{{ status.name }}</td>
                 <td>{{ status.created_at }}</td>
                 <td>
-                    <a href="{% url 'update_status' status.id %}">Изменить</a>
+                    <a href="{% url 'update_status' status.id %}">{% translate "Update" %}</a>
                     <br>
-                    <a href="{% url 'delete_status' status.id %}">Удалить</a>
+                    <a href="{% url 'delete_status' status.id %}">{% translate "Delete" %}</a>
                 </td>
             </tr>
             {% endfor %}
