--- a/task_manager/templates/tasks/create_task.html
+++ b/task_manager/templates/tasks/create_task.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load django_bootstrap5 %}
 {% block content %}
-<h1 class="my-4">Создать задачу</h1>
+<h1 class="my-4">{% translate "Create task" %}</h1>
 <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
