--- a/task_manager/templates/tasks/current_task.html
+++ b/task_manager/templates/tasks/current_task.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Просмотр задачи</h1>
+    <h1 class="my-4">{% translate "Current task" %}</h1>
     <div class="card">
         <div class="card-header bg-secondary text-white">
             <h2>{{ task.name }}</h2>
@@ -12,35 +12,36 @@
             <hr>
             <div class="container">
                 <div class="row p-1">
-                    <div class="col">Автор</div>
+                    <div class="col">{% translate "Author" %}</div>
                     <div class="col">{{ task.author }}</div>
                 </div>
                 <div class="row p-1">
-                    <div class="col">Исполнитель</div>
+                    <div class="col">{% translate "Executor" %}</div>
                     <div class="col">{{ task.executor }}</div>
                 </div>
                 <div class="row p-1">
-                    <div class="col">Статус</div>
+                    <div class="col">{% translate "Status" %}</div>
                     <div class="col">{{ task.status }}</div>
                 </div>
                 <div class="row p-1">
-                    <div class="col">Дата создания</div>
+                    <div class="col">{% translate "Created at" %}</div>
                     <div class="col">{{ task.created_at }}</div>
                 </div>
                 <div class="row p-1">
                     <div class="col">
-                        <h6>Метки:</h6>
+                        <h6>{% translate "Labels" %}:</h6>
                         {% for label in labels %}
                         <ul>
                             <li>{{ label.name }}</li>
                         </ul>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="row p-1">
                     <div class="col">
-                        <a href="{% url 'update_task' task.id %}">Изменить</a>
+                        <a href="{% url 'update_task' task.id %}">{% translate "Update" %}</a>
                         <br>
-                        <a href="{% url 'delete_task' task.id %}">Удалить</a>
+                        <a href="{% url 'delete_task' task.id %}">{% translate "Delete" %}</a>
                     </div>
                 </div>
             </div>
