--- a/task_manager/templates/tasks/delete_task.html
+++ b/task_manager/templates/tasks/delete_task.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Удаление задачи</h1>
-    <p>Вы уверены, что хотите удалить задачу {{ task.name }}?</p>
+    <h1 class="my-4">{% translate "Delete task" %}</h1>
+    <p>{% translate "Are you sure you want to delete" %} {{ task.name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="Да, удалить">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Delete' %}">
 </div>
 {% endblock %}
