--- a/task_manager/templates/tasks/update_task.html
+++ b/task_manager/templates/tasks/update_task.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
+{% load django_bootstrap5 %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Изменение задачи</h1>
+    <h1 class="my-4">{% translate "Update task" %}</h1>
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input class="btn btn-primary" type="submit" value="Изменить">
+        <input class="btn btn-primary" type="submit" value={% translate 'Update' %}>
+    </form>
 </div>
 {% endblock %}
