--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -13,7 +13,9 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    {% include 'navbar.html' %}
+    <header class="flex-shrink-0">
+        {% include 'navbar.html' %}
+    </header>
     <div class="container wrapper flex-grow-1">
         <div class="alert-{{ message.tags }}" role="alert">
             {% bootstrap_messages %}
