--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -38,10 +38,9 @@
             <td>{{ task.executor }}</td>
             <td>{{ task.created_at|date:"d.m.Y H:i" }}</td>
             <td>
-                <a class="btn btn-primary btn-sm" href="{% url 'update_task' task.id %}" role="button">{% translate
-                    'Update' %}</a>
-                <a class="btn btn-danger btn-sm" href="{% url 'delete_task' task.id %}" role="button">{% translate
-                    'Delete' %}</a>
+                <a href="{% url 'update_task' task.id %}" role="button">{% translate 'Update' %}</a>
+                <br>
+                <a href="{% url 'delete_task' task.id %}" role="button">{% translate 'Delete' %}</a>
             </td>
         </tr>
         {% endfor %}
