--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -1,13 +1,13 @@
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 
+<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 
-{% load django_bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
 <head>
+    {% load django_bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% translate "Task manager" %}</title>
 </head>
@@ -23,6 +23,11 @@
         {% block content %}
         {% endblock %}
     </div>
+    <footer>
+        <div class="container my-5 pt-4 border-top">
+          <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
+        </div>
+    </footer>
 </body>
 
 </html>
