--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,84 +1,38 @@
 {% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
   <a class="navbar-brand" href="{% url 'index' %}">{% translate "Task manager" %}</a>
-  <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'users' %}">{% trans 'Users' %}</a>
       </li>
       {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
+        <a class="nav-link" href="{% url 'statuses' %}">{% trans 'Statuses' %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'labels' %}">{% translate "Labels" %}</a>
+        <a class="nav-link" href="{% url 'labels' %}">{% trans 'Labels' %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
+        <a class="nav-link" href="{% url 'tasks' %}">{% trans 'Tasks' %}</a>
       </li>
-      <ul class="navbar-nav">
-        <form action="{% url 'logout' %}" method="post">
+      <li class="nav-item">
+        <form action="{% url 'logout' %}" method="post" style="display:inline;">
           {% csrf_token %}
-          <input class="btn nav-link" type="submit" value="{% translate 'Logout' %}">
+          <button class="btn nav-link" type="submit">{% trans 'Logout' %}</button>
         </form>
-      </ul>
+      </li>
       {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">{% translate "Login" %}</a>
+        <a class="nav-link" href="{% url 'login' %}">{% trans 'Login' %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'create_user' %}">{% translate "Register" %}</a>
+        <a class="nav-link" href="{% url 'create_user' %}">{% trans 'Registration' %}</a>
       </li>
       {% endif %}
     </ul>
   </div>
 </nav>
-
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
-  <a class="navbar-brand" href="/">Менеджер задач</a>
-  <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/users/">Пользователи</a>
-      </li>
-      
-    </ul>
-    <ul class="navbar-nav">
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
-      </li>
-      {% if user.is_authenticated %}
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'labels' %}">{% translate "Labels" %}</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
-      </li>
-      <ul class="navbar-nav">
-        <form action="{% url 'logout' %}" method="post">
-          {% csrf_token %}
-          <input class="btn nav-link" type="submit" value="{% translate 'Logout' %}">
-        </form>
-      </ul>
-      {% else %}
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">{% translate "Login" %}</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'create_user' %}">{% translate "Register" %}</a>
-      </li>
-      {% endif %}
-    </ul>
-  </div>
-</nav> -->
