--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
   <a class="navbar-brand" href="{% url 'index' %}">{% translate "Task manager" %}</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent"
+    aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
