--- a/task_manager/templates/users/create_user.html
+++ b/task_manager/templates/users/create_user.html
@@ -7,7 +7,7 @@
   <form method="post" action="{% url 'create_user' %}">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <button class="btn btn-primary btn-sm" type="submit">{% translate 'Create' %}</button>
+    <button class="btn btn-primary btn-sm" type="submit">{% translate 'Register' %}</button>
   </form>
 </div>
 {% endblock %}
