--- a/task_manager/templates/labels/delete_label.html
+++ b/task_manager/templates/labels/delete_label.html
@@ -6,7 +6,7 @@
     <p>{% translate "Are you sure you want to delete" %} {{ label.name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="Да, удалить">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
     </form>
 </div>
 {% endblock %}
