--- a/task_manager/templates/statuses/delete_status.html
+++ b/task_manager/templates/statuses/delete_status.html
@@ -6,7 +6,7 @@
     <p>{% translate "Are you sure you want to delete" %} {{ status.name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="{% translate 'Delete' %}">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
     </form>
 </div>
 {% endblock %}
