--- a/task_manager/templates/tasks/delete_task.html
+++ b/task_manager/templates/tasks/delete_task.html
@@ -6,6 +6,6 @@
     <p>{% translate "Are you sure you want to delete" %} {{ task.name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="{% translate 'Delete' %}">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
 </div>
 {% endblock %}
