--- a/task_manager/templates/users/delete_user.html
+++ b/task_manager/templates/users/delete_user.html
@@ -6,7 +6,7 @@
     <p>Вы уверены, что хотите удалить {{ user.first_name }} {{ user.last_name }}?</p>
     <form method="post">
         {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="Да, удалить">
+        <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
     </form>
 </div>
 {% endblock %}
