--- a/task_manager/templates/statuses/statuses.html
+++ b/task_manager/templates/statuses/statuses.html
@@ -14,18 +14,20 @@
             </tr>
         </thead>
         <tbody>
-            {% for status in statuses %}
-            <tr>
-                <td>{{ status.id }}</td>
-                <td>{{ status.name }}</td>
-                <td>{{ status.created_at }}</td>
-                <td>
-                    <a href="{% url 'update_status' status.id %}">{% translate "Update" %}</a>
-                    <br>
-                    <a href="{% url 'delete_status' status.id %}">{% translate "Delete" %}</a>
-                </td>
-            </tr>
-            {% endfor %}
+            {% if statuses %}
+                {% for status in statuses %}
+                <tr>
+                    <td>{{ status.id }}</td>
+                    <td>{{ status.name }}</td>
+                    <td>{{ status.created_at }}</td>
+                    <td>
+                        <a href="{% url 'update_status' status.id %}">{% translate "Update" %}</a>
+                        <br>
+                        <a href="{% url 'delete_status' status.id %}">{% translate "Delete" %}</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            {% endif %}
         </tbody>
     </table>
 </div>
