--- a/task_manager/templates/users/users.html
+++ b/task_manager/templates/users/users.html
@@ -13,21 +13,23 @@
         </tr>
     </thead>
     <tbody>
-        {% for user in users %}
-        <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.username }}</td>
-            <td>{{ user.get_full_name }}</td>
-            <td>{{ user.date_joined }}</td>
-            {% if user == current_user %}
-            <td>
-                <a href="{% url 'update_user' user.id %}">Изменить</a>
-                <br>
-                <a href="{% url 'delete_user' user.id %}">Удалить</a>
-            </td>
-            {% endif %}
-        </tr>
-        {% endfor %}
+        {% if users %}
+            {% for user in users %}
+            <tr>
+                <td>{{ user.id }}</td>
+                <td>{{ user.username }}</td>
+                <td>{{ user.get_full_name }}</td>
+                <td>{{ user.date_joined }}</td>
+                {% if user == current_user %}
+                <td>
+                    <a href="{% url 'update_user' user.id %}">Изменить</a>
+                    <br>
+                    <a href="{% url 'delete_user' user.id %}">Удалить</a>
+                </td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+        {% endif %}
     </tbody>
 </table>
 </div>
